# ansible-hardening

./: .ansible-lint  .gitignore  .gitreview  .kitchen.yml  .zuul.yaml  CONTRIBUTING.rst  Gemfile  README.md  README.rst  Vagrantfile  ansible-role-requirements.yml  bindep.txt  dev-requirements.txt  manual-test.rc  other-requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
.circleci/: config.yml
defaults/: main.yml
doc/: .gitignore  Makefile  requirements.txt
doc/metadata/: U_RedHat_6_V1R12_Manual-xccdf.xml  (+13 more)
examples/: playbook.yml
files/: V-38682-modprobe.conf  aide_extra.conf  ansible-hardening-disable-dccp.conf  zypper-autoupdates
handlers/: main.yml
meta/: main.yml  openstack-ansible.yml
openstack-ansible-security/: README.md
tasks/: aide.yml  apt.yml  auditd.yml  auth.yml  boot.yml  console.yml  file_perms.yml  kernel.yml  lsm.yml  mail.yml  main.yml  misc.yml  nfsd.yml  rpm.yml  services.yml  sshd.yml
templates/: ZZ_aide_exclusions.j2  ansible-hardening-disable-dccp.conf.j2  auditbeat.j2  chrony.conf.j2  dconf-gdm-banner-message.j2  dconf-screensaver-lock.j2  dconf-session-user-config-lockout.j2  jail.local.j2  osas-auditd-rhel7.j2  osas-auditd.j2  pam_faillock.j2  pwquality.conf.j2  sshd_config_block.j2
test_plugins/: custom_tests.py  el7_tests.py
tests/: ansible.cfg  inventory  test.yml  test_check.yml  tests-repo-clone.sh  vagrant.yml
vars/: audit.yml  common.yml  debian.yml  main.yml  redhat-10.yml  redhat-7.yml  redhat-8.yml  redhat-9.yml  redhat.yml  suse.yml  sysctl.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
(+1419 files in other folders)
